Closed Bug 201850 Opened 22 years ago Closed 22 years ago

Autocomplete Fun

Categories

(Firefox :: Address Bar, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

VERIFIED FIXED
Firebird0.6

People

(Reporter: bugs, Assigned: bugs)

References

Details

Attachments

(2 files)

Two bugs that I run into all the time with autocomplete that really piss me off: 1) Satchel (and sometimes urlbar) has a habit of crashing occasionally after long periods of usage, or implicated with sites like imdb (urlbar in that case). Something focus related. Threw in a null check, a NS_WARNING, and a graceful abort. 2) Satchel ignores autocomplete="off" on textfields as specified by sites for fields which contain sensitive data e.g. credit card info. Attaching a patch that I think fixes both of these. Could someone test.
-> me
Assignee: hewitt → ben
Ben, the autocomplete crash is bug 184202.
I realize now that your patch doesn't really fix bug 184202, it just avoids crashing. This is a nice temporary workaround, but bug 184202 should still be open when this is checked in. Sorry for the bugspam.
Would be good to get this stuff into Fb 0.6. I'll get Asa to test this for me.
Status: NEW → ASSIGNED
Target Milestone: --- → Phoenix0.6
.
Severity: normal → critical
marking fixed. I think most of the issues due to the bookmark landing in seamonkey are now fixed. But a detailed QA is needed here. I still have to sync the nsBookmarksService.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
sh*t wrong bug, reopening sorry for the spam.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I'll test the patch and QA these two issues rsn.
I've checked this patch in. It seemed to do the trick for me, but I would like to hear from others. Asa is testing atm, others should be able to get this in nightly builds.
Status: REOPENED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
*** Bug 194581 has been marked as a duplicate of this bug. ***
fwiw, this would appear to fix one particular reason it crashed, see bug 194581 comment 14
Comment on attachment 121468 [details] [diff] [review] the 194581 bit afaict ...feel free if this looks useful/correct
Attachment #121468 - Flags: review?(ben)
Comment on attachment 121468 [details] [diff] [review] the 194581 bit afaict removing obsolete review request
Attachment #121468 - Flags: review?(ben)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: