Fix for bug 201850, autocomplete fun - null check to avoid random autocomplete crashing, and support autocomplete="off" on web page text fields so as to avoid autocompleting sensitive fields such as credit card numbers